namespace DependencyInjection
{
    public class Class1
    {

    }
}
